# calib_example

./: README.md  get_trans.py  viz_calib.py
calib/: CMakeLists.txt  calib.cpp
data/: 1.pcd  2.pcd
data/bag/pose_ill/: pose.txt  pose_vxvy.txt
